<resources>
    <string name="app_name">CA1-20719</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Cart</string>
    <string name="finish">Finish your Order</string>

    <string name="hello_first_fragment">Hello to the Tea Cosy App</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Button1">Darjelling</string>
    <string name="Button2">Assam</string>
    <string name="Button3">Lpasang Sous</string>
    <string name="Button4">Earl Grey</string>
    <string name="Button5">Irish BreakFast</string>
</resources>